--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>rs-ui</title>
-  </head>
-  <body>
+    <style href="/dist/css/mui.css"></style>
+</head>
+
+<body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+    <script src="/dist/index.js"></script>
+</body>
+
 </html>
